<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".PrivacyActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/privacy_icon"
            android:contentDescription="@string/privacy_policy_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_polic"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/privacy_policy"
            android:textColor="#757575"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/purpose_and_usage" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/policy_1"
            android:textColor="#757575"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/children_s_privacy" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/privacy_2"
            android:textColor="#757575"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/security"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:lineSpacingExtra="3dp"
            android:text="@string/privacy_3"
            android:textColor="#757575"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/privacy_heading_style"
            android:text="@string/contact_us" />
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/child_textview_style"
            android:text="@string/privacy_4"
            android:textColor="#757575"
            android:lineSpacingExtra="3dp"
            android:textSize="16sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>