<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".SecretQuestionsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/lay"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_main"
            style="@style/main_textview_style"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/security_questions_text" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_main"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/child_textview_style"
                android:text="@string/first_question" />

            <com.siva.virtual.util.CustomEdittext
                android:id="@+id/et_first_answer"
                style="@style/et_answer"
                android:hint="@string/hint_et" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/child_textview_style"
                android:text="@string/second_question" />

            <com.siva.virtual.util.CustomEdittext
                android:id="@+id/et_second_answer"
                style="@style/et_answer"
                android:hint="@string/hint_et" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/child_textview_style"
                android:text="@string/third_question" />

            <com.siva.virtual.util.CustomEdittext
                android:id="@+id/et_third_answer"
                style="@style/et_answer"
                android:hint="@string/hint_et" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_setup"
            style="@style/button_style"
            android:layout_below="@+id/linear_layout1"
            android:enabled="false"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_set_up" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_setup"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/info_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/sub_child_textview"
                android:text="@string/info_about_sq" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</ScrollView>