<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerSecurityQuestionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_to_confirm"
            style="@style/main_textview_style"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/confirm_identity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_security_question"
            style="@style/child_textview_style"
            android:layout_below="@+id/tv_to_confirm"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp" />

        <com.siva.virtualWallet.util.CustomEdittext
            android:id="@+id/et_answer"
            style="@style/et_answer"
            android:layout_below="@+id/tv_security_question"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_et" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/button_style"
            android:id="@+id/btn_confirm"
            android:text="@string/confirm"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/et_answer"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_try_another"
            style="@style/sub_child_textview"
            android:layout_below="@+id/btn_confirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/try_another_question"
            android:textColor="#FD0000" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_try_another"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/info_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/sub_child_textview"
                android:text="@string/no_access_to_data" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

    <include
        layout="@layout/error_lay"
        android:id="@+id/answer_error_lay"
        android:visibility="gone" />

</FrameLayout>